--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -10,14 +10,19 @@ spring:
         webmvc:
           routes:
             - id: account-service
-              uri: http://localhost:8081
+              uri: lb://ACCOUNT-SERVICE
               predicates:
                 - Path=/accounts/**
             - id: card-service
-              uri: http://localhost:8083
+              uri: lb://CARD-SERVICE
               predicates:
                 - Path=/cards/**
             - id: loans-service
-              uri: http://localhost:8082
+              uri: lb://LOANS-SERVICE
               predicates:
                 - Path=/loans/**
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
