--- a/card-service/src/main/resources/application.yml
+++ b/card-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8083
+  port: 0
 
 spring:
   application:
@@ -17,3 +17,8 @@ spring:
   h2:
     console:
       enabled: true
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
