--- a/loans-service/src/main/resources/application.yml
+++ b/loans-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: 0
 
 spring:
   application:
@@ -18,3 +18,7 @@ spring:
     console:
       enabled: true
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
