Update application configurations: Set server ports for account, card, and loans services; add load balancer dependency to API Gateway; and update Eureka client settings in API Gateway.

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8090
 
 spring:
   application:
@@ -26,3 +26,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+    initial-instance-info-replication-interval-ms: 10
+    register-with-eureka: true
+    fetch-registry: true
